--- a/thesis/abstract_de.ltx
+++ b/thesis/abstract_de.ltx
@@ -1,12 +1,14 @@
 Wissensdatenbanken, wie DBpedia, YAGO und Wikidata, speichern Informationen über alle nennenswerten Entitäten und deren Beziehungen zueinander.
 Eine Ontologie definiert Datenschemata, Vokabulare, Hierarchien, sowie Regeln über die Gültigkeit und Herleitbarkeit von Informationen.
-Dadurch wird das Modellieren, das Teilen und der Austausch der Informationen ermöglicht.
+Dadurch wird das Modellieren, das Teilen und der Austausch von Informationen, sowie das Herleiten neues Wissens ,
+ermöglicht
 Die Taxonomie, auch Konzept- oder Klassenhierarchie genannt, ist ein grundlegender Bestandteil einer Ontologie.
 In einer Taxonomie, werden Klassen hierarchisch angeordnet, und durch eine Unterklassenrelation verbunden.
 Vollständige Taxonomien haben hierbei genau eine allgemeinste Klasse, welche zum Beispiel in Wikidata \textit{Entität} genannt wird.
 Diese Wurzelklasse ist dadurch ausgezeichnet, dass sie als einzige Klasse keine Superklassen besitzt.
 Jedoch ist die Taxonomie von Wikidata in Hinblick auf diese Eigenschaft unvollständig.
-Waisenklassen verstoßen gegen die Einzigartigkeit der Wurzelklasse, da sie auch keine Superklassen besitzen.
+Waisenklassen sind Klassen, welche nicht die Wurzelklassen sind, aber trotzdem keine Superklassen besitzen.
+Damit verstoßen Waisenklassen gegen die Einzigartigkeit der Wurzelklasse.
 
 Das Ziel dieser Bachelorarbeit ist die Entwicklung und Evaluation einer Methode zur Klassifikation von Waisenklassen in der Wikidata-Taxonomie.
 Das gegebene Klassifikationsproblem stellt eine besondere Herausforderung an die entwickelte Lösung, da theoretisch jede Klasse in der Taxonomie
