--- a/thesis/evaluation.ltx
+++ b/thesis/evaluation.ltx
@@ -303,6 +303,58 @@ In contrast, kNN and non-linear regression are already modeling non-linear funct
 no such performance increase can exist for these classifiers.
 
 
+\subsection{Characteristics of correct and incorrect predictions}
+
+analysis: tp class analysis
+total: 2042
+labeled: 1859
+enwiki: 400
+property average: 6.080803134182174
+subclass average: 0.7247796278158668
+instance average: 2.1723800195886387
+property median: 5
+subclass median: 0
+instance median: 0
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.7\textwidth]{images/evaluation/tp_class_property_counts.png}
+\caption{Percentage of correctly predicted classes with specific amount of unique properties (\dumpdate{})}
+\label{fig:tp property count}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.7\textwidth]{images/evaluation/fp_class_property_counts.png}
+\caption{Percentage of incorrectly predicted classes with specific amount of unique properties (\dumpdate{})}
+\label{fig:tp property count}
+\end{figure}
+
+analysis: fp class analysis
+total: 7958
+labeled: 6951
+enwiki: 4565
+property average: 4.517089721035436
+subclass average: 1.4068861522995728
+instance average: 74.12892686604674
+property median: 4
+subclass median: 0
+instance median: 0
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.85\textwidth]{images/evaluation/tp_class_property_frequency.png}
+\caption{Frequency of properties in correctly predicted classes (\dumpdate{}).}
+\label{fig:tp property frequency}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.85\textwidth]{images/evaluation/fp_class_property_frequency.png}
+\caption{Frequency of properties in incorrectly predicted classes (\dumpdate{}).}
+\label{fig:fp property frequency}
+\end{figure}
+
+
+
 \subsection{Discussion}
 
 The problem of classification with a very high number of labels ($>100,000$) is very difficult.
