Final correction. Progress: 10%

--- a/thesis/abstract_en.ltx
+++ b/thesis/abstract_en.ltx
@@ -1,4 +1,4 @@
-Knowledge bases, such as DBpedia, YAGO, and Wikidata, store information about all significant entities and their relationships.
+Knowledge bases, such as DBpedia, YAGO, and Wikidata, store information about notable entities and their relationships.
 An ontology defines data schemas, vocabularies, hierarchies, and rules about the validity and derivability of information.
 The ontology enables the modeling, sharing and exchange of information, as well as the derivation of new knowledge.
 The taxonomy, also called concept or class hierarchy, is a fundamental component of an ontology.
