--- a/thesis/abstract_de.ltx
+++ b/thesis/abstract_de.ltx
@@ -1,4 +1,4 @@
-Wissensdatenbanken, wie DBpedia, YAGO und Wikidata, speichern Informationen über alle nennenswerten Entitäten und deren Beziehungen zueinander.
+Wissensdatenbanken, wie DBpedia, YAGO und Wikidata, speichern Informationen über nennenswerten Entitäten und deren Beziehungen zueinander.
 Eine Ontologie definiert Datenschemata, Vokabulare, Hierarchien, sowie Regeln über die Gültigkeit und Herleitbarkeit von Informationen.
 Dadurch wird das Modellieren, das Teilen und der Austausch von Informationen, sowie das Herleiten neues Wissens ,
 ermöglicht
