--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -871,3 +871,11 @@ URL = {https://arxiv.org/pdf/1606.05336.pdf}
  publisher = {JMLR.org},
  keywords = {deep learning, model combination, neural networks, regularization},
 } 
+@misc{WikidataNotability,
+title={Wikidata notability guidelines},
+year={2017},
+month={6},
+day={29},
+howpublished={https://www.wikidata.org/wiki/Wikidata:Notability},
+note={Accessed: 2017-07-06}
+}
