Final correction. Progress: 60%.

--- a/thesis/algorithm.ltx
+++ b/thesis/algorithm.ltx
@@ -136,7 +136,7 @@ Section~\ref{section:evaluation method}.
 This stands in contradiction to intuition and experiments by \fullcite{Ristoski2016}.
 The following is a list of possible issues, which may be responsible for the unexpected bad results:
 \begin{itemize}
-\item Erroneous implementation of random graph walk. The most likely reason at this time is errors in
+\item Incorrect implementation of random graph walk. The most likely reason at this time is errors in
 the implementation of the random graph walk, which lead to the generation of ''bad'', duplicate or otherwise
 suboptimal walks.
 \item Common words are dis-proportionally overrepresented. Random graph walks are more likely to
