--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -879,3 +879,35 @@ day={29},
 howpublished={https://www.wikidata.org/wiki/Wikidata:Notability},
 note={Accessed: 2017-07-06}
 }
+@misc{StochasticProcessWiki,
+title={Stochastic process},
+year={2017},
+month={6},
+day={22},
+howpublished={https://en.wikipedia.org/wiki/Stochastic\_process},
+note={Accessed: 2017-07-08}
+}
+@article{Maglott2005,
+  added-at = {2012-09-15T11:47:22.000+0200},
+  author = {Maglott, D and Ostell, J and Pruitt, K D and Tatusova, T},
+  biburl = {http://www.bibsonomy.org/bibtex/29a8885369b7d50269b076aa31c8ac69c/sbsad},
+  description = {Entrez Gene: gene-centered information at ... [Nucleic Acids Res. 2005] - PubMed - NCBI},
+  doi = {10.1093/nar/gki031},
+  file = {:/bioinfo/users/bsadacca/Biblio/Genes_DB/EntrezGenes2005.pdf:PDF},
+  groups = {public},
+  interhash = {0b05b73ae51865c943f7c568beeb6298},
+  intrahash = {9a8885369b7d50269b076aa31c8ac69c},
+  journal = {Nucleic Acids Res},
+  keywords = {DataBase EntrezGenes Genes},
+  month = {January},
+  number = {Database issue},
+  pages = {54-58},
+  pmid = {15608257},
+  timestamp = {2012-09-18T11:48:56.000+0200},
+  title = {Entrez Gene: gene-centered information at NCBI},
+  url = {http://www.ncbi.nlm.nih.gov/pubmed/15608257},
+  username = {sbsad},
+  volume = 33,
+  year = 2005
+}
+
