--- a/thesis/ontology_learning.ltx
+++ b/thesis/ontology_learning.ltx
@@ -22,7 +22,7 @@ The process of OLg can be divided into subtasks. \fullcite{Maedche2001} define a
 \item \textbf{Apply} applies the resulting ontology on its target application. This serves as a measure of validation.
 \end{enumerate}
 These 5 steps can be repeated as often as necessary to include additional domains and updating it with new content.
-The thesis' task can be categorized to the \textit{Refine} step, as its goal is to improve the completeness of an existing ontology.
+The thesis' task can be classified as a part of the \textit{Refine} step, as its goal is to improve the completeness of an existing ontology.
 
 \fullcite{Cimiano2009} introduces a generic OL architecture and its major components. The described tool is semi-automatic, meaning
 that it support an ontology engineer rather than fully automatizing the process of ontology construction and maintenance.
@@ -53,10 +53,13 @@ For example, such a pattern is
 \mathit{NP}_{\mathit{hyper}} \: \textnormal{such as} \: \{  \mathit{NP}_\mathit{hypo} , \}^*  \:  \{ ( \textnormal{and} \mid  \textnormal{or} ) \} \: \mathit{NP}_\mathit{hypo}
 \end{align*},
 where $\mathit{NP}$ stands for noun phrase, and $\mathit{NP}_\mathit{hyper}$ is a hypernym or superclass, while $\mathit{NP}_\mathit{hypo}$ are hyponyms or subclasses.
+Applying the aforementioned pattern on the sentence "\dots disciples including sciences such as biology, chemistry, ecology, neuroscience and physics \dots", which is extracted from Wikipedia 
+\cite{StochasticProcessWiki},
+would result in the hypernym "sciences" with hyponyms "biology", "chemistry", "ecology", "neuroscience", "physics".
 These patterns provide reasonable results, but the manual creation of patterns is involve high cost and time investments \cite{Wong2012}.
 
 \textbf{Clustering} uses some measure of similarity to organize objects into groups. This can be achieved by representing the words or terms as vectors \cite{Cimiano2005},
-on which different distance or similarity measures can be applied. Clustering methods can be categorized to three different types.
+on which different distance or similarity measures can be applied. Clustering methods can be categorized to two different types.
 Agglomerative clustering initializes each term as its own cluster and merges in each step the most similar terms into one cluster.
 Divisive clustering approaches the problem the opposite way by starting with a single cluster, containing all words, and then dividing them into smaller groups.
 Both approaches generate hierarchies. Agglomerative clustering is doing so bottom-up and divisive
@@ -69,9 +72,11 @@ and  \textit{Women's Junior European Volleyball Championship (Q169956)}  could b
 In this case, phrase analysis interprets \textit{Men's Junior} and \textit{Women's Junior} as modifiers, which denote these classes as specialization to \textit{Q6834}.
 
 \textbf{Classification}-based approaches can be used, when a taxonomy is already present. In this case, classification can be used to add unclassified concepts
-to the existing hierarchy. Challenging with this task is that a taxonomy typically contains a large amount of classes and therefore classification
-methods like SVM are not suited for the task. Specific algorithms, which only consider, a subset of relevant classes are necessary to carry out an efficient classification.
-For example, \fullcite{Pekar2002} solves this problem by exploiting the taxonomy's tree structure using tree-ascending or tree-descending algorithms.
+to the existing hierarchy. 
+Because taxonomies may consists of thousands of classes, as is the case for the Wikidata taxonomy, classical classification methods such as SVM are not suited for the problem
+for the task, since these methods usually use small numbers of classes.
+ Specific algorithms, which only consider, a subset of relevant classes are necessary to carry out an efficient classification.
+For example, \fullcite{Pekar2002} solve this problem by exploiting the taxonomy's tree structure using tree-ascending or tree-descending algorithms.
 
 The algorithm developed by this thesis uses a classification-based approach, since a large taxonomy is already given.
 Instead of exploiting the hierarchic structure of the taxonomy, a variant of k-nearest-neighbors is used to address the "high number of labels" problem 
@@ -139,9 +144,9 @@ The main difference in the problems is the expected input, which is one of the r
 This is advantageous for multiple reasons.
 Only a small set of classes has to be considered for the classification decision, which are all related to subclass and are therefore related to similar topics.
 Additionally, the input already provides a set of correct subclass-of relations.
-In the thesis' case, the only given input is the subclass. 
+In this thesis, the only given input is the subclass. 
 Therefore every class in the taxonomy has to be assumed as a possible superclass rather than a small subset.
-The problem statement also assumes that for each class a superclass has to be found.
+The problem statement requires that for each class a superclass has to be found, because for each entered orphan class a connection to the root taxonomy should be made.
 Consequently the identification of subclass-of relations by \citeauthor{Fu2014} is not applicable anymore and another approach has to be implemented.
 Although piecewise linear projection is still a promising approach to use neural word embeddings for the subclass classification,
 the difficulty of the given problem implies worse results than in the presented work by \fullcite{Fu2014}.
